--- a/resume.html
+++ b/resume.html
@@ -4,93 +4,69 @@
 
    <head>
       <meta charset="utf-8">
-      <title>...</title>
+      <title>MICROSOFT OFFICE USER</title>
+<link rel="stylesheet" type="text/css" href="style.css"
    </head>
 
    <body>
 
       <header role="banner">
-         <h1>MY RESUME!<br>
-         PHENYO OTHUSITSE</h1>
+         <h1>MICROSOFT OFFICE USER</h1>
 
-         <nav>
+<strong>OBJECTIVE</strong>
 
-            <ul>
-               <li>contact number@74031319</a></li>
-               <li>email adress@abc20-013@thuto.bac.acbw</a></li>
-               <li>Postal adress@P O BOX 2,Shashe</a></li>
-            </ul>
+     <p>To get started, click the placeholder text and start typing.<br>
+       Be brief: use one or two sentences.</p>
+</header>
+<nav>
 
-         </nav>
+<strong>SKILLS</strong>
+<p>Explain what you're especially<br>
+ good at.What sets you apart?<br>
+ Use your own language-not<br>
+ jargon.</p>
 
-<h2>OBJECTIVES</h2>
+</nav>
 
-     <p>Dedicated young <em>System analysts</em> of over 5 years of experience <br>
-           speacialing in maintaining and improving computer systems for an <br>
-           organisation and its client.</p>
-      </header>
+<main>
+<h3>EXPERIENCE</h3>
 
-<h2>SKILLS</h2>
-<ol>
-    <li>Database skills</li>
-    <li>Operating skills</li>
-    <li>Good communication skills</li>
-    <li>Team leadership skills</li>
-</ol>
 
-<h2>EXPERIENCE</h2>
+<strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
+      <p>Summarise your key responsibilities,leadership and biggest<br>
+      accomplishments. Don't list everthing - keep it revelant and<br>
+       include information that shows the impact that you made.</p>
 
-<h3>System analysts,<br>
-   February.Present</h3>
-      <p>Build,develop,implement and maintain the <em>EPIC hospital billing Revenue cycle</em><br>
-        for Nyangwagwebwe hospiatl in Francistown<br>
-      <strong>Drive multiple projector</strong> and full systems along with modifications and enhacements<br>
-    of existing systems while providing domain <strong>expertise and leadership</strong><br>
-   </p>
 
-   <h3>Fianicial Systems&Revenue cycle management analysts,<br>
-   Princess Mariana hospital,November 2017-2019</h3>
+<strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
+<p>Think about the size of the team that you've led,the number of projects<br>
+you've managed successfully or number of articles you've<br>
+written.</p>
 
-         <p><strong>Researched,tested</strong>,provided trouble shooting and observed applications associated<br>
-         with each System</p>
+   <strong>EDUCATION</strong>
 
-    <h2>EDUCATION</h2>
-    <p><strong>Master of Health Administrations(MHA),University of Botswana</strong><br>
-      2015
+    <p><strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
+    COLLEGE</strong></p>
+    <p>You might want to include your marks here and a brief summary of<br>
+     relevant coursework, awards amd honours.</p>
 
-    <strong>Bachelor of science|Policy,Planning and Development</strong><br>
-  2012</p>
+    <p><strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
+    COLLEGE</strong></p>
+    <p>In the Home tab of the ribbon, take a look at Styles to apply the<br>
+    formatting you need with just a click.</p>
 
-    <h2>VOLUNTEER EXPERIENCE OR LEADERSHIP</h2>
 
-    <p>On the first of <strong>October 2018</strong>,I created a real-life<br>
-    scenarios video to asses and improve processes, patient care and overall education<br>
-  This was the time i was interviewed by MMegi newspaper and recognised as one of the bonafide employee of all times</p>
 
+    <strong>VOLUNTEER EXPERIENCE OR LEADERSHIP</strong>
+
+    <p>Did you manage a team for your club, lead a compaigh for your<br>
+       favourite charity or edit your school's newspaper?Go ahead and<br>
+     describe experinces that illustrates your leadership abilities.</p>
+
+</main>
       <footer>
                   <p>Created by Phenyo Othusitse<a href="#">Tutorials Point</a></p>
       </footer>
 
    </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
