On branch master

--- a/resume.html
+++ b/resume.html
@@ -5,68 +5,88 @@
    <head>
       <meta charset="utf-8">
       <title>MICROSOFT OFFICE USER</title>
-<link rel="stylesheet" type="text/css" href="style.css"
+<link rel="stylesheet" type="text/css" href="style.css"/>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
    </head>
 
    <body>
 
       <header role="banner">
          <h1>MICROSOFT OFFICE USER</h1>
+<div id="object">
+<h3>OBJECTIVE</h3>
 
-<strong>OBJECTIVE</strong>
 
-     <p>To get started, click the placeholder text and start typing.<br>
+     <p>To get started, click the<br>
+        placeholder text and start typing.<br>
        Be brief: use one or two sentences.</p>
 </header>
-<nav>
+</div>
 
-<strong>SKILLS</strong>
-<p>Explain what you're especially<br>
- good at.What sets you apart?<br>
- Use your own language-not<br>
- jargon.</p>
+<div id="skills">
+<h3>SKILLS</h3>
+  <p>Explain what you're especially<br>
+   good at.What sets you apart?<br>
+   Use your own language-not<br>
+   jargon.</p>
+</div>
 
-</nav>
+<div id="experience">
 
-<main>
-<h3>EXPERIENCE</h3>
+ <h3>EXPERIENCE</h3>
 
-
-<strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
+      <strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
       <p>Summarise your key responsibilities,leadership and biggest<br>
-      accomplishments. Don't list everthing - keep it revelant and<br>
+       accomplishments. Don't list everthing - keep it revelant and<br>
        include information that shows the impact that you made.</p>
 
 
-<strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
-<p>Think about the size of the team that you've led,the number of projects<br>
-you've managed successfully or number of articles you've<br>
-written.</p>
+      <strong>JOB TITLE . COMPANY .DATES FROM - TO</strong>
+      <p>Think about the size of the team that you've led,the number of projects<br>
+      you've managed successfully or number of articles you've<br>
+      written.</p>
 
-   <strong>EDUCATION</strong>
+</div>
 
-    <p><strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
-    COLLEGE</strong></p>
+<div id="education">
+<h3>EDUCATION</h3>
+
+    <strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
+    COLLEGE</strong><br>
+
     <p>You might want to include your marks here and a brief summary of<br>
-     relevant coursework, awards amd honours.</p>
+     relevant coursework, awards amd honours.</p><br>
 
-    <p><strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
-    COLLEGE</strong></p>
+    <strong>DEGREE OR QUALIFICATION . DATE EARNED . UNIVERSITY OR<br>
+    COLLEGE</strong><br>
+
     <p>In the Home tab of the ribbon, take a look at Styles to apply the<br>
     formatting you need with just a click.</p>
+</div>
 
-
-
-    <strong>VOLUNTEER EXPERIENCE OR LEADERSHIP</strong>
+<div id="volunteer">
+    <h3>VOLUNTEER EXPERIENCE OR LEADERSHIP</h3>
 
     <p>Did you manage a team for your club, lead a compaigh for your<br>
        favourite charity or edit your school's newspaper?Go ahead and<br>
      describe experinces that illustrates your leadership abilities.</p>
+</div>
 
-</main>
-      <footer>
-                  <p>Created by Phenyo Othusitse<a href="#">Tutorials Point</a></p>
-      </footer>
 
-   </body>
+<footer id="footer">
+      <div class="social-menu">
+            <ul>
+                <li><a href="#"><i class="fas fa-envelope-square"></i></a><li><br>
+                  <p>EMAIL ADDRESS</p><br>
+                <li><a href="#"><i class="fab fa-twitter-square"></i></a><li><br>
+                  <p>TWITTER HANDLE</p><br>
+                <li><a href="#"><i class="fas fa-phone"></i></a><li><br>
+                  <p>TELEPHONE.NO</p><br>
+                <li><a href="#"><i class="fab fa-linkedin"></i></a><li><br>
+                  <p>LINKEDIN</p><br>
+            </ul>
+         </div>
+      </div>
+   </footer>
+</body>
 </html>
